package com.structural.CompositePattern.Exercise1;

public abstract class Component {
    abstract public void addChile(Component c);
    abstract public void travers();


}
